num_enum/tests/try_build/compile_fail/exhaustive_enum.stderr
error: #[derive(FromPrimitive)] requires a variant marked with `#[default]` or `#[num_enum(default)]`
 --> $DIR/exhaustive_enum.rs:1:10
  |
1 | #[derive(num_enum::FromPrimitive)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `num_enum::FromPrimitive` (in Nightly builds, run with -Z macro-backtrace for more info)
